2011-04-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry--split-fancy-with-parent-internal):
	Fix logic bug.
	(gnus-registry-post-process-groups): Fix logging of no results and
	quote sender and subject.

2011-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* proto-stream.el (proto-stream-open-starttls): Only do opportunistic
	STARTTLS upgrades if we have built-in gnutls support.  Upgrades via
	gnutls-cli are too slow to be done opportunistically.

	* gnus-start.el (gnus-get-unread-articles): Slight cleanup.
	(gnus-read-active-for-groups): Don't try to finish getting stuff where
	we had no early-data returned.
	(gnus-get-unread-articles): Add a sanity check so that we don't issue
	two async commands to the same server at the same time.

2011-04-12  Stig Sandbeck Mathisen  <ssm@fnord.no>  (tiny change)

	* gnus-sum.el (gnus-summary-select-article-buffer): Doc fix.

2011-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-registry.el (gnus-registry-remake-db): Put the warning on a
	"warning" level.

	* mm-url.el (mm-url-package-name): Removed to ease third-party reuse.
	(mm-url-insert-file-contents): Don't set the package names.

2011-04-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-action): Remove properties and
	simplify subject in `gnus-registry-handle-action'.
	(gnus-registry-spool-action): Get subject and sender from message if
	they are not passed in.
	(gnus-registry-handle-action): Remove properties and simplify subject
	consistently.

2011-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* registry.el: Require CL before using defmacro*.

2011-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-treat-date): Assume that
	gnus-article-date-headers may be a group parameter.

2011-04-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-handle-action): More debugging.

	* gnus-start.el (gnus-gnus-to-newsrc-format): Add a way to run